Login form, Login request

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 :root {
   --dsc-color-bg-primary: #e8e8e8;
   --dsc-color-bg-secondary: #ffe500;
-  --dsc-color-bg-tertiary: #636363;
+  --dsc-color-bg-tertiary: #C2C2C2;
   --dsc-color-bg-quaternary: #0caf1d;
   --dsc-color-bg-notification: #f00;
 
